--- a/style.css
+++ b/style.css
@@ -79,3 +79,44 @@ canvas {
   .left {
     grid-column: 6 / 12;
   }
+
+.center {
+  text-align: center;
+}
+
+#districtTitle {
+  font-size: 3.3rem;
+  
+  background-image: linear-gradient(rgb(223, 252, 253), rgb(178, 224, 230));
+  background-clip: text;
+  color: transparent;
+
+  transition: 0.65s;
+  opacity: 0.2;
+
+  position:absolute;
+  top: 8%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  pointer-events: none;
+  touch-action: none;
+  user-select: none;
+  text-align: center;
+}
+
+#loadText {
+  font-size: 4rem;
+  color: rgb(173, 219, 225);
+  pointer-events: none;
+  touch-action: none;
+  user-select: none;
+}
+
+#xout {
+  position:absolute;
+  top: 5%;
+  left: 2%;
+  max-width: 5%;
+  height: auto;
+}
